# Omni

./: .gitignore  README.md  allweightsinfo.txt  config.json  convertllama32tofp16.py  convertqwen2tofp16.py  converttofp16.py  covertbigjson.py  covertjsonltojson.py  debug_template.py  final_data_check.py  fix_jsonl_key.py  flux_decoder_core.py  get_mask.py  inspect_nvidia_ocr_synthetic_dataset.py  mega_research_mixer.py  mm_and_color_vg.py  mm_and_colorbenchmark.py  mydepedencys.txt  ppevalatemme.sh  pyproject.toml  show_layoutlm384.py  test_all_layourlm_layer_384.py  test_diffusion.py  test_dinov3_offline.py  test_layoutlm_vision.py  test_llam3_tokens.py
bunny/: constants.py  conversation.py  debug_template.py
bunny/eval/: configuration_bunny_phi.py  model_phi_evalation.py  model_vqa_loader.py  (+4 more)
dataengine/: analyzing_invalid_samples.py  clean_ocr_dataset.py  data_profile_analyzer.py  dataset_sanitizer.py  ffixed_remove_invalidsamples.py  find_bad_samples.py  path_absolute_fixer.py  prepare_blip3o.py  prepare_eco_40_instruction_dataset.py  prepare_fasion_reconization_dataset.py  prepare_mask_for_eco_4o.py  prepare_mengma_dataset.py  random_sample_ocr_data_stage1.py  slm_gold_mixer_v2.py
script/: merge_lora_weights.py
scripts_phi15_mixed/: 01_ascend_pretrain_dino_troc_llama.sh  01_ascend_pretrain_dino_troc_llama_ocronlydata.sh  01_ascend_pretrain_llma.sh  01_pretrain.sh  01_pretrain_llama.sh  01_pretrain_qwen2.sh  02_finetune_recipes.sh  02_finetuned_sharegpt.sh  03_ascend_pretrain_dino_troc_llama.sh  03_finetune_llama.sh  03_finetune_qwen2.sh  03_full_update.sh
(+69 files in other folders)
